<resources>
    <string name="app_name">Калькулятор</string>
    <string name="add_button">+</string>
    <string name="sub_button">-</string>
    <string name="mul_button">*</string>
    <string name="div_button">/</string>
    <string name="first_number_hint">Первое число</string>
    <string name="second_number_hint">Второе число</string>
    <string name="result_title">Результат</string>
    <string name="back_button">Назад</string>
    <string name="input_error">Неверно введены числа</string>
    <string name="zero_error">На ноль делить нельзя</string>

</resources>